--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "dependencies": {
         "expo": "~40.0.0",
+        "expo-constants": "~9.3.3",
         "expo-splash-screen": "~0.8.0",
         "expo-status-bar": "~1.0.3",
         "expo-updates": "~0.4.0",
@@ -22,12 +23,12 @@
     },
     "devDependencies": {
         "@babel/core": "~7.9.0",
-        "babel-jest": "~25.2.6",
-        "jest": "~25.2.6",
-        "react-test-renderer": "~16.13.1",
         "@types/react": "~16.9.35",
         "@types/react-dom": "~16.9.8",
         "@types/react-native": "~0.63.2",
+        "babel-jest": "~25.2.6",
+        "jest": "~25.2.6",
+        "react-test-renderer": "~16.13.1",
         "typescript": "~4.0.0"
     },
     "private": true,
