--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "dependencies": {
         "expo": "~40.0.0",
         "expo-constants": "~9.3.3",
+        "expo-localization": "~9.1.0",
         "expo-splash-screen": "~0.8.0",
         "expo-status-bar": "~1.0.3",
         "expo-updates": "~0.4.0",
+        "moment": "^2.29.1",
         "react": "16.13.1",
         "react-dom": "16.13.1",
         "react-native": "~0.63.4",
