--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "expo-status-bar": "~1.0.3",
         "expo-updates": "~0.4.0",
         "moment": "^2.29.1",
+        "moment-jalaali": "^0.9.2",
         "react": "16.13.1",
         "react-dom": "16.13.1",
         "react-native": "~0.63.4",
@@ -27,6 +28,7 @@
     },
     "devDependencies": {
         "@babel/core": "~7.9.0",
+        "@types/moment-jalaali": "^0.7.4",
         "@types/react": "~16.9.35",
         "@types/react-dom": "~16.9.8",
         "@types/react-native": "^0.63.45",
