--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
         "eject": "expo eject"
     },
     "dependencies": {
+        "@react-native-community/checkbox": "^0.5.7",
+        "@unimodules/core": "~5.1.2",
         "expo": "~40.0.0",
         "expo-constants": "~9.3.3",
         "expo-localization": "~9.1.0",
@@ -18,13 +20,15 @@
         "react": "16.13.1",
         "react-dom": "16.13.1",
         "react-native": "~0.63.4",
+        "react-native-elements": "^3.1.0",
         "react-native-gesture-handler": "~1.8.0",
         "react-native-paper": "^4.6.0",
         "react-native-reanimated": "~1.13.0",
         "react-native-screens": "~2.15.0",
         "react-native-unimodules": "~0.12.0",
         "react-native-vector-icons": "^7.1.0",
-        "react-native-web": "~0.13.12"
+        "react-native-web": "~0.13.12",
+        "react-native-windows": "^0.63.17"
     },
     "devDependencies": {
         "@babel/core": "~7.9.0",
