--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "moment": "^2.29.1",
         "moment-jalaali": "^0.9.2",
         "react": "16.13.1",
+        "react-devtools-core": "^4.10.1",
         "react-dom": "16.13.1",
         "react-native": "~0.63.4",
         "react-native-elements": "^3.1.0",
