--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "expo-splash-screen": "~0.8.0",
         "expo-status-bar": "~1.0.3",
         "expo-updates": "~0.4.0",
+        "ii-react-native-android-local-notification": "^4.0.0",
         "moment": "^2.29.1",
         "moment-jalaali": "^0.9.2",
         "react": "16.13.1",
