--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "scripts": {
         "start": "react-native start",
-        "android": "react-native run-android",
+        "android-debug": "react-native run-android --appIdSuffix=debug",
+        "android-release": "react-native run-android --variant=release",
         "ios": "react-native run-ios",
         "web": "expo start --web",
         "eject": "expo eject"
@@ -15,7 +16,7 @@
         "expo-splash-screen": "~0.8.0",
         "expo-status-bar": "~1.0.3",
         "expo-updates": "~0.4.0",
-        "ii-react-native-android-local-notification": "^4.0.0",
+        "ii-react-native-android-local-notification": "4.0.0",
         "moment": "^2.29.1",
         "moment-jalaali": "^0.9.2",
         "react": "16.13.1",
