--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     },
     "dependencies": {
         "@react-native-community/checkbox": "^0.5.7",
+        "@react-native-community/masked-view": "^0.1.10",
+        "@react-navigation/native": "^5.9.2",
+        "@react-navigation/stack": "^5.14.2",
         "@unimodules/core": "~5.1.2",
         "expo": "~40.0.0",
         "expo-constants": "~9.3.3",
@@ -24,10 +27,11 @@
         "react-dom": "16.13.1",
         "react-native": "~0.63.4",
         "react-native-elements": "^3.1.0",
-        "react-native-gesture-handler": "~1.8.0",
+        "react-native-gesture-handler": "^1.9.0",
         "react-native-paper": "^4.6.0",
-        "react-native-reanimated": "~1.13.0",
-        "react-native-screens": "~2.15.0",
+        "react-native-reanimated": "^1.13.2",
+        "react-native-safe-area-context": "^3.1.9",
+        "react-native-screens": "^2.17.0",
         "react-native-unimodules": "~0.12.0",
         "react-native-vector-icons": "^7.1.0",
         "react-native-web": "~0.13.12",
